fixed overlapping video

--- a/src/components/Courses/style.scss
+++ b/src/components/Courses/style.scss
@@ -210,6 +210,7 @@ table{
 	position: fixed;
 	top: 0;
 	height: 10vh;
+	z-index: 5;
 	
 }
 .sidelist{
